update fix modal shift on Windows OS

--- a/src/scss/layouts/_main.scss
+++ b/src/scss/layouts/_main.scss
@@ -1,7 +1,7 @@
 @use "../utils/variables" as *;
 
 html {
-  scrollbar-gutter: stable;
+ // scrollbar-gutter: stable;
 }
 
 body.modal-open {
